--- a/eshell.texi
+++ b/eshell.texi
@@ -299,18 +299,14 @@ is the key to comprehending how it all works.
 Unlike regular system shells, Eshell never invokes kernel functions
 directly, such as @code{exec(3)}.  Instead, it uses the Lisp functions
 available in the Emacs Lisp library.  It does this by transforming the
-command you specify into a callable Lisp form.@footnote{To see the Lisp
+input line into a callable Lisp form.@footnote{To see the Lisp
 form that will be invoked, type: @samp{eshell-parse-command "echo
 hello"}}
 
-This transformation, from the string of text typed at the command
-prompt, to the ultimate invocation of either a Lisp function or external
-command, follows these steps:
-
-@enumerate
-@item Parse the command string into separate arguments.
-@item
-@end enumerate
+The command can be either an Elisp function or an external command.
+Eshell looks first for an alias with the same name as the command, then
+a function or @ref{Built-ins, built-in command} with the same name, and
+then it tries to execute it as an external command.
 
 @node Completion
 @section Completion
@@ -471,7 +467,6 @@ Example:
 @node Process control
 @chapter Process control
 
-
 @node Extension modules
 @chapter Extension modules
 
@@ -545,7 +540,7 @@ which is the version included with Emacs 22.
 
 @item Differentiate between aliases and functions
 
-Allow for a bash-compatible syntax, such as:
+Allow for a Bash-compatible syntax, such as:
 
 @example
 alias arg=blah
@@ -829,7 +824,7 @@ them; @code{min} would display the smallest figure, etc.
 It would provide syntax, abbrev, highlighting and indenting support like
 @code{emacs-lisp-mode} and @code{shell-mode}.
 
-@item In the history mechanism, finish the @command{bash}-style support
+@item In the history mechanism, finish the Bash-style support
 
 This means @samp{!n}, @samp{!#}, @samp{!:%}, and @samp{!:1-} as separate
 from @samp{!:1*}.
