Added "Feedback" section to README.

--- a/README.org
+++ b/README.org
@@ -3,3 +3,6 @@ This is an effort to fill in the missing bits of the manual for Ehsell, the Emac
 
 * Licensing
 I will be submitting this to be included in Emacs as a patch to the official manual, so I will assign copyright on this file to the [[https://www.fsf.org/][FSF]].  If you wish to make any contributions to this effort, you will have to do the same.
+
+* Feedback
+I try to write good documentation, so let me know if any of my additions or changes are unclear.
