--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,26 @@
 #+STARTUP: content
 
 * Documentation
-** DONE Built-in commands [52/52]
+** TODO /Commands/
+Expand introductory paragraph.
+
+*** TODO /Invocation/
+Expand this a bit to mention how external commands are invoked, the order of searching, and refer to the section on the parser.
+
+*** TODO /Completion/
+Document Eshell completion.
+
+*** DONE /Aliases/
+Briefly describe Eshell aliases, and mention the aliases file.
+
+*** DONE /History/
+Appears to be complete already.  Mention the history file.
+
+*** TODO /Scripts/
+Briefly describe how scripts are loaded.
+
+*** TODO /Built-ins/ [1/2]
+**** DONE /Built-in commands/ [52/52]
 Document each built-in command that has behaviour different to the external command of the same name.
 
 - [X] .
@@ -57,20 +76,41 @@ Document each built-in command that has behaviour different to the external comm
 - [X] which
 - [X] whoami
 
-** TODO "Arguments" chapter
+**** TODO /Built-in variables/
+This appears to be complete, but check the source for any unmentioned variables.
+
+** TODO /Arguments/
 Write an overview paragraph, and fill in each subsection.
 
-*** TODO "The Parser" subsection
-For now, I've made this refer the reader to =eshell-display-predicate-help= and =eshell-display-predicate-help=, but the reference does not belong in the source code, and should be moved to the manual/
+*** TODO /The Parser/
+This should probably be the name of the chapter, instead of "Arguments".
 
-*** TODO "Variables" subsection
-** TODO "Input/Output" chapter
+*** TODO /Variables/
+Document how variables are handled; most importantly, whether the scope is different from the rest of Emacs.
+
+*** TODO /Substitution/
+Document substitution.  e.g. ${command} => output of command
+
+*** TODO /Globbing/
+Document globbing.  e.g. *.el
+
+*** TODO /Predicates/
+I have briefly mentioned Eshell's support for Zsh-style globbing and reference the Zsh manual.  For now, I have also made this refer the reader to =eshell-display-predicate-help= and =eshell-display-predicate-help=, but the reference does not belong in the source code, and should be moved to the manual.
+
+** TODO /Input/Output/
 Document redirection.
 
-** TODO "Extention modules" chapter
+** TODO /Process control/
+I don't think this is handled any differently in Eshell, in which case, remove this (empty) chapter and just add a mention in the indirection to the "Invocation" chapter.
+
+** TODO /Extension modules/
 - [X] Find out from johnw what this should cover.
-<johnw> aidalgol: check out em-banner.el [2012-09-05 Wed 16:59]
+~<johnw> aidalgol: check out em-banner.el~
+
+** TODO /Extras and Goodies/
+This should be removed until the manual is finished and there are any miscellaneous topics left undocumented.
 
 * Code
 ** TODO Fix =eshell/kill=
 Add ability to kill non-process objects to match the documentation.
+** TODO Squash any easy bugs mentioned at the end of the manual
