--- a/TODO.org
+++ b/TODO.org
@@ -113,4 +113,5 @@ This should be removed until the manual is finished and there are any miscellane
 * Code
 ** TODO Fix =eshell/kill=
 Add ability to kill non-process objects to match the documentation.
-** TODO Squash any easy bugs mentioned at the end of the manual
+** TODO Bug squashing
+Squash any easy bugs mentioned at the end of the manual
