Tidied the "Licensing" section in README.

--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 This is an effort to fill in the missing bits of the manual for Ehsell, the Emacs Shell.  It is based on the [[http://git.savannah.gnu.org/cgit/emacs.git/tree/doc/misc/eshell.texi?h%3Demacs-23][Eshell manual from Emacs23]].
 
 * Licensing
-I will be submitting this to be included in Emacs as a patch to the official manual, so I will assign copyright on this file to the [[https://www.fsf.org/][FSF]].  If you wish to make any contributions to this effort, you will have to do the same.
+I will submit this to be included in Emacs as a patch to the official manual, so I will assign copyright on it (the Texinfo file) to the [[https://www.fsf.org/][FSF]].  If you wish to make any contributions to this effort, you will have to do the same.
 
 * Feedback
 I try to write good documentation, so let me know if any of my additions or changes are unclear.
