--- a/TODO.org
+++ b/TODO.org
@@ -114,5 +114,8 @@ This should be removed until the manual is finished and there are any miscellane
 ** TODO Fix =eshell/kill=
 Add ability to kill non-process objects to match the documentation, and update the documentation to describe usage in more detail.
 
+** TODO Remove predicate reference
+Remove the functions =eshell-display-predicate-help= and =eshell-display-predicate-help= and their associated variables, after copying the reference to the manual.  See [["Predicates"%20section][the corresponding TODO item for the documentation]].
+
 ** TODO Bug squashing
 Squash any easy bugs mentioned at the end of the manual.
