--- a/eshell.texi
+++ b/eshell.texi
@@ -296,7 +296,6 @@ is the key to comprehending how it all works.
 
 @node Invocation
 @section Invocation
-
 Unlike regular system shells, Eshell never invokes kernel functions
 directly, such as @code{exec(3)}.  Instead, it uses the Lisp functions
 available in the Emacs Lisp library.  It does this by transforming the
@@ -306,10 +305,16 @@ hello"}}
 
 The command can be either an Elisp function or an external command.
 Eshell looks first for an alias with the same name as the command, then
-a function or @ref{Built-ins, built-in command} with the same name, and
-then it tries to execute it as an external command.
+a @ref{Built-ins, built-in command} or a function with the same name; if
+there is no match, it then tries to execute it as an external command.
 
-The semicolon (@code{;}) can be used to separate multiple command invocations on a single line.  A command invocation followed by an ampersand (@code{&}) will be run in the background.  Eshell has no job control, so you can not suspend or background the current process, or bring a background process into the foreground.  That said, background processes invoked from Eshell can be controlled the same way as any other background process in Emacs.
+The semicolon (@code{;}) can be used to separate multiple command
+invocations on a single line.  A command invocation followed by an
+ampersand (@code{&}) will be run in the background.  Eshell has no job
+control, so you can not suspend or background the current process, or
+bring a background process into the foreground.  That said, background
+processes invoked from Eshell can be controlled the same way as any
+other background process in Emacs.
 
 @node Completion
 @section Completion
