Rewrote the intro to "Commands".
Rewrote the introductory paragraph to the "Commands" chapter to cover
reflect new content.

--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,7 @@
 #+STARTUP: content
 
 * Documentation
-** TODO "Commands" chapter
+** DONE "Commands" chapter
 Expand introductory paragraph.
 
 *** DONE "Invocation" section
