--- a/eshell.texi
+++ b/eshell.texi
@@ -281,6 +281,11 @@ on your mind.  Have fun!
 @node Commands
 @chapter Commands
 
+In a command shell, everything is done by invoking commands.  This
+chapter covers command invocations in Eshell, including the command
+history and invoking commands in a script file.  The next chapter covers
+command arguments.
+
 @menu
 * Invocation::
 * Completion::
@@ -290,18 +295,12 @@ on your mind.  Have fun!
 * Built-ins::
 @end menu
 
-Essentially, a command shell is all about invoking commands---and
-everything that entails.  So understanding how Eshell invokes commands
-is the key to comprehending how it all works.
-
 @node Invocation
 @section Invocation
 Unlike regular system shells, Eshell never invokes kernel functions
 directly, such as @code{exec(3)}.  Instead, it uses the Lisp functions
 available in the Emacs Lisp library.  It does this by transforming the
-input line into a callable Lisp form.@footnote{To see the Lisp
-form that will be invoked, type: @samp{eshell-parse-command "echo
-hello"}}
+input line into a callable Lisp form.@footnote{To see the Lisp form that will be invoked, type: @samp{eshell-parse-command "echo hello"}}
 
 The command can be either an Elisp function or an external command.
 Eshell looks first for an alias with the same name as the command, then
