--- a/eshell.texi
+++ b/eshell.texi
@@ -78,7 +78,7 @@ handling the sort of tasks accomplished by those tools.
 * What is Eshell?::             A brief introduction to the Emacs Shell.
 * Command basics::              The basics of command usage.
 * Commands::
-* Arguments::
+* Expansion::
 * Input/Output::
 * Extension modules::
 * Extras and Goodies::
@@ -283,16 +283,17 @@ on your mind.  Have fun!
 
 In a command shell, everything is done by invoking commands.  This
 chapter covers command invocations in Eshell, including the command
-history and invoking commands in a script file.  The next chapter covers
-command arguments.
+history and invoking commands in a script file.
 
 @menu
 * Invocation::
-* Completion::
+* Arguments::
+* Variables::
+* Built-ins::
 * Aliases::
 * History::
+* Completion::
 * Scripts::
-* Built-ins::
 @end menu
 
 @node Invocation
@@ -303,9 +304,10 @@ available in the Emacs Lisp library.  It does this by transforming the
 input line into a callable Lisp form.@footnote{To see the Lisp form that will be invoked, type: @samp{eshell-parse-command "echo hello"}}
 
 The command can be either an Elisp function or an external command.
-Eshell looks first for an alias with the same name as the command, then
-a @ref{Built-ins, built-in command} or a function with the same name; if
-there is no match, it then tries to execute it as an external command.
+Eshell looks first for an @ref{Aliases, alias} with the same name as the
+command, then a @ref{Built-ins, built-in command} or a function with the
+same name; if there is no match, it then tries to execute it as an
+external command.
 
 The semicolon (@code{;}) can be used to separate multiple command
 invocations on a single line.  A command invocation followed by an
@@ -315,62 +317,19 @@ bring a background process into the foreground.  That said, background
 processes invoked from Eshell can be controlled the same way as any
 other background process in Emacs.
 
-@node Completion
-@section Completion
-
-@node Aliases
-@section Aliases
-
-Aliases are commands that expand to a longer input line.  For example,
-@command{ll} is a common alias for @code{ls -l}; with this defined,
-running @samp{ll foo} in Eshell will actually run @samp{ls -l foo}.
-
-They are defined in the file specified by @var{eshell-aliases-file}, one
-per line, in the form @samp{alias ll ls -l} (using the above example).
-
-@node History
-@section History
-@cmindex history
-The @samp{history} command shows all commands kept in the history ring
-as numbered list.  If the history ring contains
-@code{eshell-history-size} commands, those numbers change after every
-command invocation, therefore the @samp{history} command shall be
-applied before using the expansion mechanism with history numbers.
-
-The n-th entry of the history ring can be applied with the @samp{!n}
-command.  If @code{n} is negative, the entry is counted from the end
-of the history ring.
-
-@samp{!foo} expands to the last command beginning with @code{foo}, and
-@samp{!?foo} to the last command containing @code{foo}.  The n-th
-argument of the last command beginning with @code{foo} is accessible
-by @code{!foo:n}.
-
-The history ring is loaded from a file at the start of every session,
-and written back to the file at the end of every session.  The file path
-is specified in @var{eshell-history-file-name}.  Unlike other shells,
-such as Bash, Eshell can not be configured to keep a history ring of a
-different size than the size of the history file.
-
-@node Scripts
-@section Scripts
-@cmindex source
-@fnindex eshell-source-file
-You can run Eshell scripts much like scripts for other shells; the main
-difference is that since Eshell is not a system command, you have to run
-it from within Emacs.  An Eshell script is simply a file containing a
-sequence of commands, as with almost any other shell script.  Scripts
-are invoked from Eshell with @command{source}, or from anywhere in Emacs
-with @code{eshell-source-file}.
-
-@cmindex .
-If you wish to load a script into your @emph{current} environment,
-rather than in a subshell, use the @code{.} command.
+@node Arguments
+@section Arguments
+Command arguments are passed to the functions as either strings or
+numbers, depending on what the parser thinks they look like.  If you
+need to use a function that takes some other data type, you will need to
+call it in an Elisp expression (which can also be used with
+@ref{Expansion, expansions}).  As with other shells, you can
+escape special characters and spaces with the backslash (@code{\}) and
+the single (@code{''}) and double {@code{""}) quotes.
 
 @node Built-ins
 
 @section Built-in commands
-
 Several commands are built-in in Eshell.  In order to call the
 external variant of a built-in command @code{foo}, you could call
 @code{*foo}.  Usually, this should not be necessary.  You can check
@@ -527,34 +486,88 @@ Lisp functions, based on successful completion).
 
 @end table
 
-@node Arguments
-@chapter Arguments
-Command arguments are passed to the functions as either strings or
-numbers, depending on what the parser thinks they look like.  If you
-need to use a function that takes some other data type, you will need to
-call it in an Elisp expression (which can also be used with
-@ref{Variables & Expansion, expansions}).  As with other shells, you can
-escape special characters and spaces with the backslash (@code{\}) and
-the single (@code{''}) and double {@code{""}) quotes.
-
-@menu
-* Variables & Expansion::
-* Globbing::
-* Predicates::
-@end menu
-
-@node Variables & Expansion
+@node Variables
 @section Variables
 Since Eshell is just an Emacs REPL@footnote{Read-Eval-Print Loop}, it
 does not have its own scope, and simply stores variables the same you
 would in an Elisp program.  Eshell provides a command version of
 @code{setq} for convenience.
 
-@section Expansion
-Eshell has different expansion syntax from other shells.  There are some
-similarities, but don't let these lull you into a false sense of
-familiarity.  Expansions are usually passed as arguments, but may also
-be used as commands.
+@node Aliases
+@section Aliases
+
+Aliases are commands that expand to a longer input line.  For example,
+@command{ll} is a common alias for @code{ls -l}; with this defined,
+running @samp{ll foo} in Eshell will actually run @samp{ls -l foo}.
+
+They are defined in the file specified by @var{eshell-aliases-file}, one
+per line, in the form @samp{alias ll ls -l} (using the above example).
+
+@node History
+@section History
+@cmindex history
+The @samp{history} command shows all commands kept in the history ring
+as numbered list.  If the history ring contains
+@code{eshell-history-size} commands, those numbers change after every
+command invocation, therefore the @samp{history} command shall be
+applied before using the expansion mechanism with history numbers.
+
+The n-th entry of the history ring can be applied with the @samp{!n}
+command.  If @code{n} is negative, the entry is counted from the end
+of the history ring.
+
+@samp{!foo} expands to the last command beginning with @code{foo}, and
+@samp{!?foo} to the last command containing @code{foo}.  The n-th
+argument of the last command beginning with @code{foo} is accessible
+by @code{!foo:n}.
+
+The history ring is loaded from a file at the start of every session,
+and written back to the file at the end of every session.  The file path
+is specified in @var{eshell-history-file-name}.  Unlike other shells,
+such as Bash, Eshell can not be configured to keep a history ring of a
+different size than the size of the history file.
+
+@node Completion
+@section Completion
+
+@node Scripts
+@section Scripts
+@cmindex source
+@fnindex eshell-source-file
+You can run Eshell scripts much like scripts for other shells; the main
+difference is that since Eshell is not a system command, you have to run
+it from within Emacs.  An Eshell script is simply a file containing a
+sequence of commands, as with almost any other shell script.  Scripts
+are invoked from Eshell with @command{source}, or from anywhere in Emacs
+with @code{eshell-source-file}.
+
+@cmindex .
+If you wish to load a script into your @emph{current} environment,
+rather than in a subshell, use the @code{.} command.
+
+@node Expansion
+@chapter Expansion
+Expansion in a command shell is somewhat like macro expansion in macro
+parsers (such as @command{cpp} and @command{m4}), but in a command
+shell, they are less often used for constants, and usually for using
+variables and string manipulation.@footnote{Eshell has no
+string-manipulation expansions because the Elisp library already
+provides many functions for this.}  For example, @code{$var} on a line
+expands to the value of the variable @code{var} when the line is
+executed.  Expansions are usually passed as arguments, but may also be
+used as commands.@footnote{e.g. Entering just @samp{$var} at the prompt
+is equivalent to entering the value of @code{var} at the prompt.}
+
+@menu
+* Dollars Expansion::
+* Globbing::
+@end menu
+
+@node Dollars Expansion
+@section Dollars Expansion
+Eshell has different @code{$} expansion syntax from other shells.  There
+are some similarities, but don't let these lull you into a false sense
+of familiarity.
 
 @table @code
 
@@ -599,26 +612,13 @@ to @code{"hello"}.
 
 @node Globbing
 @section Globbing
-
-@node Predicates
-@section Predicates
-Eshell recognises Zsh-style predicates; see @ref{Filename Generation, , , zsh} for full syntax.  The syntax can be customized with the following options:
-
-@defvr{User Option} @code{eshell-predicate-alist}
-A list of modifiers than can be applied to an argument expansion.  The
-format of each entry is
-@example
-@code{(CHAR ENTRYWISE-P MODIFIER-FUNC-SEXP)}
-@end example
-@end defvr
-
-@defvr{User Option} @code{eshell-modifier-alist}
-A list of predicates than can be applied to a globbing pattern.  The
-format of each entry is
-@example
-@code{(CHAR . PREDICATE-FUNC-SEXP)}
-@end example
-@end defvr
+Eshell's globbing syntax is very similar to that of Zsh.  Users coming
+from Bash can still use Bash-style globbing, as there are no
+incompatibilities.  Most globbing is pattern-based expansion, but there
+is also predicate-based expansion.  @xref{Filename Generation, , , zsh}
+for full syntax.  To customize the syntax and behaviour of globbing in
+Eshell see the Customize@footnote{@xref{Customization Settings, Customize, , elisp}}
+groups ``eshell-glob'' and ``eshell-pred''.
 
 @node Input/Output
 @chapter Input/Output
