Added my name to the title page (alongside John Wiegley's).
I think I've written enough that this is fair.  I hope I'm not being
pretentious. :P

--- a/eshell.texi
+++ b/eshell.texi
@@ -45,7 +45,7 @@ developing GNU and promoting software freedom.''
 @c -release-
 @end ignore
 @sp 3
-@center John Wiegley
+@center John Wiegley & Aidan Gauland
 @c -date-
 
 @page
